--- a/src/components/CallToAction.astro
+++ b/src/components/CallToAction.astro
@@ -1,6 +1,6 @@
 ---
 interface Props {
-	href: string;
+  href: string;
 }
 
 const { href } = Astro.props;
@@ -9,48 +9,32 @@ const { href } = Astro.props;
 <a href={href}><slot /></a>
 
 <style>
-	a {
-		position: relative;
-		display: flex;
-		place-content: center;
-		text-align: center;
-		padding: 0.56em 2em;
-		gap: 0.8em;
-		color: var(--accent-text-over);
-		text-decoration: none;
-		line-height: 1.1;
-		border-radius: 999rem;
-		overflow: hidden;
-		background: var(--gradient-accent-orange);
-		box-shadow: var(--shadow-md);
-		white-space: nowrap;
-	}
+  a {
+    position: relative;
+    text-decoration: none;
+    line-height: 1.1;
+    overflow: hidden;
+    font-family: var(--font-brand);
+    white-space: nowrap;
+    display: flex;
+    place-content: center;
+  }
 
-	@media (min-width: 20em) {
-		a {
-			font-size: var(--text-lg);
-		}
-	}
+  a svg {
+    margin-left: 1em;
+  }
 
-	/* Overlay for hover effects. */
-	a::after {
-		content: '';
-		position: absolute;
-		inset: 0;
-		pointer-events: none;
-		transition: background-color var(--theme-transition);
-		mix-blend-mode: overlay;
-	}
+  @media (min-width: 20em) {
+    a {
+      font-size: var(--text-lg);
+    }
+  }
 
-	a:focus::after,
-	a:hover::after {
-		background-color: hsla(var(--gray-999-basis), 0.3);
-	}
-
-	@media (min-width: 50em) {
-		a {
-			padding: 1.125rem 2.5rem;
-			font-size: var(--text-xl);
-		}
-	}
+  @media (min-width: 50em) {
+    a {
+      padding-top: 2.5rem;
+      font-size: var(--text-xl);
+      text-align: right;
+    }
+  }
 </style>
