--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,15 +6,15 @@ const currentYear = new Date().getFullYear();
 <footer>
 	<div class="group">
 		<p>
-			Designed & Developed in Portland with <a href="https://astro.build/">Astro</a>
+			Built with <a href="https://astro.build/">Astro</a>
 			<Icon icon="rocket-launch" size="1.2em" />
 		</p>
-		<p>&copy; {currentYear} Jeanine White</p>
+		<p>&copy; {currentYear} Matt Kane</p>
 	</div>
 	<p class="socials">
-		<a href="https://twitter.com/me"> Twitter</a>
-		<a href="https://github.com/me"> GitHub</a>
-		<a href="https://codepen.io/me"> CodePen</a>
+		<a href="https://twitter.com/ascorbic"> Twitter</a>
+		<a href="https://github.com/ascorbic"> GitHub</a>
+		<a href="https://elk.zone/indieweb.social/@ascorbic"> Mastodon</a>
 	</p>
 </footer>
 <style>
