--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,54 +1,58 @@
 ---
 interface Props {
-	title: string;
-	tagline?: string;
-	align?: 'start' | 'center';
+  title: string;
+  tagline?: string;
+  align?: "start" | "center";
 }
 
-const { align = 'center', tagline, title } = Astro.props;
+const { align = "center", tagline, title } = Astro.props;
 ---
 
-<header class:list={['hero stack gap-4', align]}>
-	<div class="stack gap-2">
-		<h1 class="title">{title}</h1>
-		{tagline && <p class="tagline">{tagline}</p>}
-	</div>
-	<slot />
+<header class:list={["hero stack gap-4", align]}>
+  <div class="stack gap-2">
+    <h1 class="title">{title}</h1>
+    {tagline && <p class="tagline">{tagline}</p>}
+  </div>
+  <slot />
 </header>
 
 <style>
-	.hero {
-		font-size: var(--text-lg);
-		text-align: center;
-	}
+  .hero {
+    font-size: var(--text-lg);
+    text-align: center;
+  }
 
-	.title,
-	.tagline {
-		max-width: 37ch;
-		margin-inline: auto;
-	}
+  .title,
+  .tagline {
+    max-width: 37ch;
+    margin-inline: auto;
+  }
 
-	.title {
-		font-size: var(--text-3xl);
-		color: var(--gray-0);
-	}
+  .tagline {
+    margin-block: 1em;
+  }
 
-	@media (min-width: 50em) {
-		.hero {
-			font-size: var(--text-xl);
-		}
+  .title {
+    font-size: var(--text-xl);
+    color: var(--gray-0);
+  }
 
-		.start {
-			text-align: start;
-		}
+  @media (min-width: 50em) {
+    .hero {
+      font-size: var(--text-xl);
+    }
 
-		.start .title,
-		.start .tagline {
-			margin-inline: unset;
-		}
+    .start {
+      text-align: start;
+    }
 
-		.title {
-			font-size: var(--text-5xl);
-		}
-	}
+    .start .title,
+    .start .tagline {
+      margin-inline: unset;
+    }
+
+    .title {
+      font-size: var(--text-4xl);
+    }
+  }
 </style>
