--- a/src/components/PortfolioPreview.astro
+++ b/src/components/PortfolioPreview.astro
@@ -1,64 +1,61 @@
 ---
-import type { CollectionEntry } from 'astro:content';
+import type { CollectionEntry } from "astro:content";
+import { Image } from "@unpic/astro";
 
 interface Props {
-	project: CollectionEntry<'work'>;
+  project: CollectionEntry<"work">;
 }
 
 const { data, slug } = Astro.props.project;
 ---
 
-<a class="card" href={`/work/${slug}`}>
-	<span class="title">{data.title}</span>
-	<img src={data.img} alt={data.img_alt || ''} loading="lazy" decoding="async" />
+<a class="card" href={`/projects/${slug}`}>
+  <span class="title">{data.title}</span>
+  <span class="description">{data.description}</span>
 </a>
 
 <style>
-	.card {
-		display: grid;
-		grid-template: auto 1fr / auto 1fr;
-		height: 11rem;
-		background: var(--gradient-subtle);
-		border: 1px solid var(--gray-800);
-		border-radius: 0.75rem;
-		overflow: hidden;
-		box-shadow: var(--shadow-sm);
-		text-decoration: none;
-		font-family: var(--font-brand);
-		font-size: var(--text-lg);
-		font-weight: 500;
-		transition: box-shadow var(--theme-transition);
-	}
+  .card {
+    padding: 1rem 1.5rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: min-content 1fr;
+    border: 1px solid var(--gray-800);
+    overflow: hidden;
+    box-shadow: var(--shadow-sm);
+    text-decoration: none;
+    font-family: var(--font-brand);
+    font-size: var(--text-lg);
+    font-weight: 500;
+    transition: box-shadow var(--theme-transition);
+  }
 
-	.card:hover {
-		box-shadow: var(--shadow-md);
-	}
+  .card:hover {
+    box-shadow: var(--shadow-md);
+  }
 
-	.title {
-		grid-area: 1 / 1 / 2 / 2;
-		z-index: 1;
-		margin: 0.5rem;
-		padding: 0.5rem 1rem;
-		background: var(--gray-999);
-		color: var(--gray-200);
-		border-radius: 0.375rem;
-	}
+  .title {
+    grid-area: 1 / 1 / 2 / 2;
+    z-index: 2;
+    color: var(--gray-200);
+  }
 
-	img {
-		grid-area: 1 / 1 / 3 / 3;
-		width: 100%;
-		height: 100%;
-		object-fit: cover;
-	}
+  .description {
+    grid-area: 2 / 1 / 2 / 2;
+    z-index: 2;
+    margin-top: 0.5rem;
+    color: var(--gray-200);
+    font-weight: 300;
+    font-size: var(--text-md);
+    font-family: var(--font-body);
+  }
 
-	@media (min-width: 50em) {
-		.card {
-			height: 22rem;
-			border-radius: 1.5rem;
-		}
+  @media (min-width: 50em) {
+    .card {
+      min-height: 10rem;
+    }
 
-		.title {
-			border-radius: 0.9375rem;
-		}
-	}
+    .title {
+    }
+  }
 </style>
