--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -130,7 +130,7 @@ const ctaIcon = isGithub ? "github-logo" : "arrow-right";
 
   .back-link,
   .content :global(a) {
-    text-decoration: 1px solid underline transparent;
+    text-decoration: 1px solid underline var(--accent-overlay);
     text-underline-offset: 0.25em;
     transition: text-decoration-color var(--theme-transition);
   }
