Upgrade and refactor

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import PortfolioPreview from "../components/PortfolioPreview.astro";
 
 const projects = (await getCollection("work"))
   .filter((project) => project.data.featured)
-  .sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
+  .sort((a, b) => a.data.featured! - b.data.featured!)
   .slice(0, 4);
 
 // Full Astro Component Syntax:
