--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -248,7 +248,7 @@ const iconLinks: { label: string; href: string; icon: IconProps["icon"] }[] = [
       display: grid;
       grid-template-columns: 1fr auto 1fr;
       align-items: center;
-      padding: 2.5rem 5rem;
+      padding: 2.5rem 3rem;
       gap: 1rem;
     }
 
@@ -273,7 +273,8 @@ const iconLinks: { label: string; href: string; icon: IconProps["icon"] }[] = [
 
     .link {
       padding: 0.5rem 1rem;
-      transition: color var(--theme-transition),
+      transition:
+        color var(--theme-transition),
         background-color var(--theme-transition);
     }
 
