--- a/src/components/PortfolioPreview.astro
+++ b/src/components/PortfolioPreview.astro
@@ -64,6 +64,7 @@ const { data, slug } = Astro.props.project;
     display: grid;
     place-items: center;
     padding: 1em;
+    background-color: white;
   }
 
   .card:hover {
