--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,6 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 
-import ContactCTA from "../components/ContactCTA.astro";
 import Hero from "../components/Hero.astro";
 ---
 
@@ -14,12 +13,14 @@ import Hero from "../components/Hero.astro";
         <h2 class="section-title">Background</h2>
         <div class="content">
           <p>
-            I am a product-minded software engineer, with nearly 25 years of
-            experience in building for the web. I started out as a pastry chef,
-            but moved into coding in my teens. Most of my early career was as a
-            founder, but in recent years I have been building dev tool products
-            at high-growth startups. I am currently a principal engineer at
-            Netlify.
+            I am a product-minded software engineer, with 25 years of experience
+            in building for the web. I started out as a pastry chef, but moved
+            into coding in my teens. Most of my early career was as a founder,
+            but in recent years I have been building dev tool products at
+            high-growth startups. I am currently employed as a core maintainer
+            at <a href="https://astro.build">the Astro Technology Company</a>.
+            Previously I was a principal engineer at Netlify, working on the
+            frameworks team.
           </p>
           <p>
             I love the open web and open source software, and have contributed
@@ -27,10 +28,9 @@ import Hero from "../components/Hero.astro";
             most modern web frameworks.
           </p>
           <p>
-            I'm not much of a photographer myself, but I always seem to end up
-            building tools to help people who are. My very first startup was
-            creating tools for panoramic photography. I co-founded a company
-            building <a
+            I build a lot of photography and image tools, even though I'm not
+            much of a photographer myself. My very first startup was creating
+            tools for panoramic photography. I co-founded a company building <a
               href="https://petapixel.com/2013/09/19/triggertrap-releases-revamped-version-2-0-now-offers-14-triggering-options/"
               >app-based camera triggers</a
             >. I then created <a href="/projects/vela-one"
@@ -38,7 +38,8 @@ import Hero from "../components/Hero.astro";
             >. In more recent years, I worked on creating Gatsby's image plugin,
             and most recently I created
             <a href="/projects/unpic">Unpic</a>, a multi-framework component
-            library and toolkit for displaying images on the web.
+            library and toolkit for displaying images on the web with around 30k
+            weekly downloads.
           </p>
           <p>
             I live in the south-west of England with my wife and two children. I
