--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -92,7 +92,8 @@ import Hero from "../components/Hero.astro";
     }
 
     .content :global(a) {
-      text-decoration: 1px solid underline transparent;
+      text-decoration: 1px solid underline;
+      text-decoration-color: rgb(190, 190, 190);
       text-underline-offset: 0.25em;
       transition: text-decoration-color var(--theme-transition);
     }
