No more socials

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -13,24 +13,14 @@ const textLinks: { label: string; href: string }[] = [
 /** Icon links to social media — edit these with links to your profiles! */
 const iconLinks: { label: string; href: string; icon: string }[] = [
   {
-    label: "Twitter",
-    href: "https://twitter.com/ascorbic",
-    icon: "ri:twitter-line",
-  },
-  {
     label: "GitHub",
     href: "https://github.com/ascorbic",
     icon: "ri:github-line",
   },
   {
-    label: "BlueSky",
+    label: "Bluesky",
     href: "https://bsky.app/profile/mk.gg",
     icon: "ri:bluesky-line",
-  },
-  {
-    label: "Mastodon",
-    href: "https://elk.zone/indieweb.social/@ascorbic",
-    icon: "ri:mastodon-line",
   },
 ];
 ---
